--- a/source/_data/languages.yml
+++ b/source/_data/languages.yml
@@ -1,8 +1,8 @@
 en:
   menu:
-    Softwares: Softwares
-    CV: CV
+    softwares: Softwares
+    cv: CV
 zh-CN:
   menu:
-    Softwares: 软件
-    CV: 简历
+    softwares: 软件
+    cv: 简历
