--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -1,6 +1,8 @@
 reminder: true
 minify: true
 language_switcher: true
+cache:
+  enable: false
 favicon:
   small: https://avatars2.githubusercontent.com/u/9496702?s=460&v=4
   medium: https://avatars2.githubusercontent.com/u/9496702?s=460&v=4
