--- a/source/now.json
+++ b/source/now.json
@@ -3,7 +3,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "*",
+            "src": ".",
             "use": "@now/static"
         }
     ]
