--- a/now.json
+++ b/now.json
@@ -8,6 +8,7 @@
         }
     ],
     "routes": [
+        { "handle": "filesystem" },
         { "src": "/.*", "status": 404, "dest": "404.html" }
     ]
 }
