--- a/now.json
+++ b/now.json
@@ -6,5 +6,9 @@
             "src": "package.json",
             "use": "@now/static-build"
         }
+    ],
+    "routes": [
+        { "handle": "filesystem" },
+        { "src": "/.*", "status": 404, "dest": "404.html" }
     ]
 }
