--- a/source/_data/languages.yml
+++ b/source/_data/languages.yml
@@ -1,10 +1,10 @@
 en:
   name: English
   menu:
-    Softwares: Softwares
-    CV: CV
+    softwares: Softwares
+    cv: CV
 zh-CN:
   name: 简体中文
   menu:
-    Softwares: 软件
-    CV: 简历
+    softwares: 软件
+    cv: 简历
