--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -19,8 +19,8 @@ creative_commons:
 scheme: Gemini
 menu:
   home: / || home
-  CV: /cv/ || user
-  Softwares: /softwares/ || server
+  cv: /cv/ || user
+  softwares: /softwares/ || server
   categories: /categories/ || th
   archives: /archives/ || archive
 menu_settings:
