chore: update valine config (#555)
* chore: update valine config

* Update source/_data/next.yml

--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -66,11 +66,12 @@ math:
   enable: true
 valine:
   enable: true
-  appid: UJXGMqVd8DbRnRm6eSUV74aA-9Nh9j0Va
-  appkey: JWC5OD0apLNWan5JVDwDrvsx
+  appid: YMI6904uVYbYEvp2Q0MtJc8n-MdYXbMMI
+  appkey: hY1CYIauaeAmQe75EmPUFgN0
   notify: true
   visitor: true
   recordIP: true
+  serverURLs: https://blogcomment.njzjz.win
 google_analytics:
   tracking_id: UA-74033886-1
 local_search:
