--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hexo-generator-search": "2.4.0",
     "hexo-generator-sitemap": "2.0.0",
     "hexo-generator-tag": "1.0.0",
+    "hexo-image-cloudflare": "https://github.com/njzjz/hexo-image-cloudflare",
     "hexo-pdf": "1.1.1",
     "hexo-reference": "1.0.4",
     "hexo-related-popular-posts": "4.0.0",
