--- a/_config.next.yml
+++ b/_config.next.yml
@@ -78,6 +78,14 @@ local_search:
   enable: true
 pdf:
   enable: true
+links_settings:
+  icon: fa fa-link
+  title: Friend Links
+  layout: block
+links:
+  "Darrin York Group": http://theory.rutgers.edu/profile.php?people_id=230
+  "Tong Zhu Group": https://computchem.cn/people
+  "hexi blog": https://hexi519.github.io
 vendors:
   anime: //js.njzjz.win/npm/animejs@3.1.0/lib/anime.min.js
   fontawesome: //js.njzjz.win/npm/@fortawesome/fontawesome-free@5/css/all.min.css
