--- a/_config.next.yml
+++ b/_config.next.yml
@@ -72,6 +72,7 @@ valine:
   notify: true
   visitor: true
   recordIP: true
+  enableQQ: true
   serverURLs: https://blogcomment.njzjz.win
 google_analytics:
   tracking_id: UA-74033886-1
