--- a/_config.next.yml
+++ b/_config.next.yml
@@ -41,6 +41,11 @@ follow_me:
 reward_settings:
   enable: true
   animation: true
+mobile_layout_economy: true
+pjax: true
+mediumzoom: true
+motion:
+  async: true
 reward:
   wechatpay: https://img.njzjz.win/?url=i.loli.net/2018/08/26/5b821ce3a2497.jpg
   alipay: https://img.njzjz.win/?url=i.loli.net/2018/08/26/5b821c8f752b4.png
