chore: enable pangu and quicklink

--- a/_config.next.yml
+++ b/_config.next.yml
@@ -44,6 +44,11 @@ reward_settings:
 mobile_layout_economy: true
 pjax: true
 mediumzoom: true
+pangu: true
+quicklink:
+  enable: true
+  home: true
+  archive: true
 motion:
   enable: false
   async: true
