--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,7 @@ code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
   - 404.html
-  - cv/*.html
-  - redirect/*
-  - now.json
+  - css/*
 
 # Writing
 new_post_name: :title.md # File name of new posts
