--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hexo-renderer-stylus": "1.1.0",
     "hexo-server": "2.0.0",
     "hexo-symbols-count-time": "0.7.1",
+    "hexo-tag-source": "^0.0.1",
     "hexo-theme-next": "8.0.0-rc.5"
   },
   "devDependencies": {
