--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,4 +1,10 @@
-on: push
+on:
+  push:
+    branches:
+      - master
+    tags:
+      - v*
+  pull_request:
 name: Build and deploy on push
 jobs:
   yarnInstall:
@@ -8,7 +14,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/setup-node@v1
       with:
-        node-version: 12
+        node-version: 14
     - run: npm install -g yarn
     - name: Get yarn cache
       id: yarn-cache
