--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "bundlesize": "0.18.0",
-    "hexo-all-minifier": "0.5.3"
+    "hexo-filter-optimize": "^0.3.1"
   },
   "engines": {
     "node": ">=10.x"
