--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ highlight:
   enable: true
   line_number: true
   auto_detect: true
-  tab_replace: true
+  tab_replace: false
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
