--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "build": "hexo g && bundlesize",
-    "now-build": "yarn build && mv public dist"
+    "now-build": "sudo apt-get install libtool automake autoconf nasm -y && yarn build && mv public dist"
   },
   "bundlesize": [
     {
