chore: assign from-commit and to-commit

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -49,3 +49,5 @@ jobs:
         url-prefix: 'https://njzjz.win/'
         zone-id: ${{ secrets.CLOUDFLAREZONEID }}
         api-token: ${{ secrets.CLOUDFLAREAPITOKEN }}
+        from-commit: 'HEAD~1'
+        to-commit: 'HEAD'
