--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,7 @@ tag_map:
 ## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
+updated_option: date
 
 # Pagination
 ## Set per_page to 0 to disable pagination
