--- a/_config.next.yml
+++ b/_config.next.yml
@@ -111,4 +111,4 @@ vendors:
   plugins: jsdelivr
 nprogress:
   enable: true
-images: https://cdn.jsdelivr.net/npm/hexo-theme-next@8.0.2/source/images/
+images: https://cdn.jsdelivr.net/npm/hexo-theme-next@8.0.2/source/images
