chore: use jsdelivr for images (#708)
* chore: use jsdelivr for images

* Update _config.next.yml

--- a/_config.next.yml
+++ b/_config.next.yml
@@ -111,3 +111,4 @@ vendors:
   plugins: jsdelivr
 nprogress:
   enable: true
+images: https://cdn.jsdelivr.net/npm/hexo-theme-next@8.0.2/source/images
