--- a/now.json
+++ b/now.json
@@ -1,6 +1,8 @@
 {
-    "name": "jinzhe-blog",
     "version": 2,
+    "github": {
+        "enabled": false
+    },
     "builds": [
         {
             "src": "package.json",
@@ -10,5 +12,5 @@
     "routes": [
         { "handle": "filesystem" },
         { "src": "/.*", "status": 404, "dest": "404.html" }
-    ]
+    ]  
 }
