--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -43,7 +43,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Vercel Action
         uses: amondnet/vercel-action@master
-        if: github.ref != 'refs/heads/master'
+        if: github.ref != 'refs/heads/hexo'
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -51,7 +51,7 @@ jobs:
           vercel-project-id: ${{ secrets.PROJECT_ID }}
       - name: Vercel Action
         uses: amondnet/vercel-action@master
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/hexo'
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
