--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,37 +32,90 @@ jobs:
       if: github.ref == 'refs/heads/hexo'
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: css
+        FOLDER: public
+        BASE_BRANCH: hexo
+        CLEAN: true
+  css_commit:
+    name: get css commit
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/hexo'
+    outputs:
+      sha: ${{ steps.get_commit.outputs.sha }}
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        ref: 'css'
+        fetch-depth: 1
+    - id: get_commit
+      run: echo "::set-output name=sha::$(git rev-parse HEAD)"
+  build_deployment:
+    name: build deployment
+    runs-on: ubuntu-latest
+    needs: css_commit
+    if: github.ref == 'refs/heads/hexo'
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 14
+    - run: npm install -g yarn
+    - name: Get yarn cache
+      id: yarn-cache
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - uses: actions/cache@v2
+      with:
+        path: ${{ steps.yarn-cache.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
+    - run: yarn install
+    - run: yarn build
+      env:
+        CSS_COMMIT: ${{needs.css_commit.outputs.sha}}
+    - name: Deploy to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      if: github.ref == 'refs/heads/hexo'
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: master
         FOLDER: public
         BASE_BRANCH: hexo
         CLEAN: true
-  deploy:
-    name: deploy on Vercel
+  deploy_test:
+    name: test on Vercel
     runs-on: ubuntu-latest
+    if: github.ref != 'refs/heads/hexo'
     steps:
       - uses: actions/checkout@v2
       - name: Vercel Action
         uses: amondnet/vercel-action@master
-        if: github.ref != 'refs/heads/hexo'
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           vercel-org-id: ${{ secrets.ORG_ID }}
           vercel-project-id: ${{ secrets.PROJECT_ID }}
+  deploy:
+    name: deploy on Vercel
+    runs-on: ubuntu-latest
+    needs: css_commit
+    if: github.ref == 'refs/heads/hexo'
+    steps:
+      - uses: actions/checkout@v2
       - name: Vercel Action
         uses: amondnet/vercel-action@master
-        if: github.ref == 'refs/heads/hexo'
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           vercel-org-id: ${{ secrets.ORG_ID }}
           vercel-project-id: ${{ secrets.PROJECT_ID }}
-          vercel-args: '--prod'
+          vercel-args: '--prod --build-env CSS_COMMIT=${{needs.css_commit.outputs.sha}}'
   purge:
     name: purge cloudflare caches
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/hexo'
-    needs: [build, deploy]
+    needs: [build_deployment, deploy]
     steps:
     - uses: actions/checkout@v2
       with:
