--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -33,7 +33,7 @@ jobs:
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: css
-        FOLDER: public
+        FOLDER: public/css
         BASE_BRANCH: hexo
         CLEAN: true
   css_commit:
