--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "hexo-generator-searchdb": "1.3.3",
     "hexo-generator-sitemap": "2.1.0",
     "hexo-generator-tag": "1.0.0",
-    "hexo-image-cloudflare": "0.1.0",
+    "hexo-image-cloudflare": "https://github.com/njzjz/hexo-image-cloudflare#max_width2",
     "hexo-pdf": "1.1.1",
     "hexo-reference": "1.0.4",
     "hexo-related-popular-posts": "5.0.1",
