--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "5.3.0"
+    "version": "3.8.0"
   },
   "scripts": {
     "build": "hexo g && bundlesize",
@@ -26,7 +26,7 @@
     "hexo-generator-searchdb": "1.3.3",
     "hexo-generator-sitemap": "2.1.0",
     "hexo-generator-tag": "1.0.0",
-    "hexo-image-cloudflare": "https://github.com/njzjz/hexo-image-cloudflare#max_width2",
+    "hexo-image-cloudflare": "0.1.0",
     "hexo-pdf": "1.1.1",
     "hexo-reference": "1.0.4",
     "hexo-related-popular-posts": "5.0.1",
