chore: add more max_width (#755)
* chore: add more max_width

* bugfix

* bugfix

* bugfix

* bugfix

* Revert "bugfix"

This reverts commit 6557dcbd0dadeb24d97011b63a2279215f8efa06.

* add more sizes

* revert package.json

--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,11 @@ search:
 
 cdn: 
   use_webp: true
-  max_width: 828
+  max_width:
+    - 828
+    - 1656
+    - 378
+    - 678
 
 pwa:
   manifest:
