chore: give GITHUB_TOKEN to bundlesize

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,6 +27,8 @@ jobs:
           ${{ runner.os }}-yarn-
     - run: yarn install
     - run: yarn build
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@releases/v3
       if: github.ref == 'refs/heads/hexo'
@@ -74,6 +76,7 @@ jobs:
     - run: yarn build
       env:
         CSS_COMMIT: ${{needs.css_commit.outputs.sha}}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@releases/v3
       if: github.ref == 'refs/heads/hexo'
