--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -76,12 +76,12 @@ jobs:
     - run: yarn build
       env:
         CSS_COMMIT: ${{needs.css_commit.outputs.sha}}
-        BUNDLESIZE_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BUNDLESIZE_GITHUB_TOKEN: ${{ secrets.BUNDLESIZE_GITHUB_TOKEN }}
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@releases/v3
       if: github.ref == 'refs/heads/hexo'
       with:
-        GITHUB_TOKEN: ${{ secrets.BUNDLESIZE_GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: master
         FOLDER: public
         BASE_BRANCH: hexo
