chore: add preconnect to headers

--- a/now.json
+++ b/now.json
@@ -11,6 +11,7 @@
     ],
     "routes": [
         { "handle": "filesystem" },
+        { "src": "/.*", "headers": { "Link": "https://cdn.jsdelivr.net; rel=preconnect" }, "continue": true },
         { "src": "/.*", "status": 404, "dest": "404.html" }
     ]  
 }
