chore: switch comment system to waline (#765)
* chore: switch comment system to waline

* move configs

* fix typo

* remove old configs

--- a/_config.yml
+++ b/_config.yml
@@ -164,3 +164,7 @@ pwa:
               maxEntries: 60
               maxAgeSeconds: 2592000
       offlineGoogleAnalytics: true
+waline:
+  enable: true
+  serverURL: https://comment.njzjz.win
+  visitor: true
