--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.8.0"
+    "version": "5.3.0"
   },
   "scripts": {
     "build": "hexo g && bundlesize",
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "@jiangtj/hexo-next-pwa": "1.0.2",
+    "@njzjz/sitemap": "^0.0.2",
     "@waline/hexo-next": "1.0.3",
     "hexo": "5.3.0",
     "hexo-generator-archive": "1.0.0",
