chore: update image links

--- a/_config.next.yml
+++ b/_config.next.yml
@@ -37,7 +37,7 @@ social:
   Weibo: https://weibo.com/njzjz || fab fa-weibo
 follow_me:
   Twitter: https://twitter.com/njzjz || twitter
-  WeChat: https://img.njzjz.win/?url=open.weixin.qq.com/qr/code?username=gh_c3cec7062858 || wechat
+  WeChat: https://open.weixin.qq.com/qr/code?username=gh_c3cec7062858 || wechat
 reward_settings:
   enable: true
   animation: true
