--- a/_config.next.yml
+++ b/_config.next.yml
@@ -42,7 +42,7 @@ reward_settings:
   enable: true
   animation: true
 mobile_layout_economy: true
-pjax: true
+pjax: false
 lazyload: true
 mediumzoom: true
 pangu: true
