--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,7 +27,13 @@ jobs:
           ${{ runner.os }}-yarn-
     - run: yarn install
     - run: yarn build
+      if: github.ref != 'refs/heads/hexo'
+    - run: yarn build
+      if: github.ref == 'refs/heads/hexo'
+      env:
+        CSS_COMMIT: css
     - name: Deploy to GitHub Pages
+      id: csspush
       uses: JamesIves/github-pages-deploy-action@releases/v3
       if: github.ref == 'refs/heads/hexo'
       with:
@@ -36,44 +42,9 @@ jobs:
         FOLDER: public/css
         BASE_BRANCH: hexo
         CLEAN: true
-  css_commit:
-    name: get css commit
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/hexo'
-    outputs:
-      sha: ${{ steps.get_commit.outputs.sha }}
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        ref: 'css'
-        fetch-depth: 1
-    - id: get_commit
-      run: echo "::set-output name=sha::$(git rev-parse HEAD)"
-  build_deployment:
-    name: build deployment
-    runs-on: ubuntu-latest
-    needs: css_commit
-    if: github.ref == 'refs/heads/hexo'
-    steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
-      with:
-        node-version: 14
-    - run: npm install -g yarn
-    - name: Get yarn cache
-      id: yarn-cache
-      run: echo "::set-output name=dir::$(yarn cache dir)"
-    - uses: actions/cache@v2
-      with:
-        path: ${{ steps.yarn-cache.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-yarn-
-    - run: yarn install
-    - run: yarn build
-      env:
-        CSS_COMMIT: ${{needs.css_commit.outputs.sha}}
+    - name: Purge jsdelivr cache
+      if: github.ref == 'refs/heads/hexo' && ${{ steps.csspush.outputs.deployment-status }} == success
+      run: curl https://purge.jsdelivr.net/gh/njzjz/njzjz.github.io@css/main.css
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@releases/v3
       if: github.ref == 'refs/heads/hexo'
@@ -83,49 +54,3 @@ jobs:
         FOLDER: public
         BASE_BRANCH: hexo
         CLEAN: true
-  deploy_test:
-    name: test on Vercel
-    runs-on: ubuntu-latest
-    if: github.ref != 'refs/heads/hexo'
-    steps:
-      - uses: actions/checkout@v2
-      - name: Vercel Action
-        uses: amondnet/vercel-action@master
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          vercel-org-id: ${{ secrets.ORG_ID }}
-          vercel-project-id: ${{ secrets.PROJECT_ID }}
-  deploy:
-    name: deploy on Vercel
-    runs-on: ubuntu-latest
-    needs: css_commit
-    if: github.ref == 'refs/heads/hexo'
-    steps:
-      - uses: actions/checkout@v2
-      - name: Vercel Action
-        uses: amondnet/vercel-action@master
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          vercel-org-id: ${{ secrets.ORG_ID }}
-          vercel-project-id: ${{ secrets.PROJECT_ID }}
-          vercel-args: '--prod --build-env CSS_COMMIT=${{needs.css_commit.outputs.sha}}'
-  purge:
-    name: purge cloudflare caches
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/hexo'
-    needs: [build_deployment, deploy]
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        ref: 'master'
-        fetch-depth: 2
-    - name: cachepurger
-      uses: njzjz/cachepurger@index
-      with:
-        url-prefix: 'https://njzjz.win/'
-        zone-id: ${{ secrets.CLOUDFLAREZONEID }}
-        api-token: ${{ secrets.CLOUDFLAREAPITOKEN }}
-        from-commit: 'HEAD~1'
-        to-commit: 'HEAD'
