--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -36,7 +36,7 @@ jobs:
         BUNDLESIZE_GITHUB_TOKEN: ${{ secrets.BUNDLESIZE_GITHUB_TOKEN }}
     - name: Deploy to GitHub Pages
       id: csspush
-      uses: JamesIves/github-pages-deploy-action@releases/v3
+      uses: JamesIves/github-pages-deploy-action@releases/v4
       if: github.ref == 'refs/heads/hexo'
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -45,10 +45,10 @@ jobs:
         BASE_BRANCH: hexo
         CLEAN: true
     - name: Purge jsdelivr cache
-      if: github.ref == 'refs/heads/hexo' && ${{ steps.csspush.outputs.deployment-status }} == success
+      if: github.ref == 'refs/heads/hexo' && ${{ steps.csspush.outputs.deployment-status }} == 'success'
       run: curl https://purge.jsdelivr.net/gh/njzjz/njzjz.github.io@css/main.css
     - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@releases/v3
+      uses: JamesIves/github-pages-deploy-action@releases/v4
       if: github.ref == 'refs/heads/hexo'
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
