chore: fix actions bug

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -45,7 +45,7 @@ jobs:
         BASE_BRANCH: hexo
         CLEAN: true
     - name: Purge jsdelivr cache
-      if: github.ref == 'refs/heads/hexo' && ${{ steps.csspush.outputs.deployment-status }} == 'success'
+      if: github.ref == 'refs/heads/hexo' && steps.csspush.outputs.deployment-status == 'success'
       run: curl https://purge.jsdelivr.net/gh/njzjz/njzjz.github.io@css/main.css
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@releases/v4
