chore: minify xml

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   },
   "devDependencies": {
     "bundlesize": "0.18.1",
-    "hexo-all-minifier": "0.5.5"
+    "hexo-all-minifier": "0.5.5",
+    "minify-xml": "^2.5.0"
   },
   "engines": {
     "node": ">=10.x"
