--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "hexo-symbols-count-time": "0.7.1",
     "hexo-tag-bilitube": "0.1.9",
     "hexo-tag-publications": "0.0.10",
-    "hexo-theme-next": "8.2.1"
+    "hexo-theme-next": "8.2.1",
+    "micromatch": "^4.0.2"
   },
   "devDependencies": {
     "bundlesize": "0.18.1",
