--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "hexo-symbols-count-time": "0.7.1",
     "hexo-tag-bilitube": "0.1.9",
     "hexo-tag-publications": "0.0.10",
-    "hexo-theme-next": "8.2.1"
+    "hexo-theme-next": "8.2.1",
+    "micromatch": "^4.0.2"
   },
   "devDependencies": {
     "bundlesize": "0.18.1",
-    "hexo-all-minifier": "0.5.5"
+    "hexo-all-minifier": "0.5.5",
+    "minify-xml": "^2.5.0"
   },
   "engines": {
     "node": ">=10.x"
